# pcn

./: .gitignore  LICENSE  README.md  data_util.py  demo.py  io_util.py  kitti_registration.py  lmdb_writer.py  requirements.txt  test_kitti.py  test_shapenet.py  tf_util.py  train.py  visu_util.py
data/: .gitignore  README.md
demo_data/: airplane.pcd  car.pcd  chair.pcd  lamp.pcd
kitti_util/: README.md  parse_tracklet_xml.py  process_kitti_raw.py
models/: fc.py  folding.py  pcn_cd.py  pcn_emd.py
pc_distance/: makefile  tf_approxmatch.py  tf_nndistance.cu  tf_nndistance.py
render/: .gitignore  README.md  process_exr.py  render_depth.py
sample/: CMakeLists.txt  README.md  mesh_sampling.cpp
